frontend/src/index.css
* {
  padding: 0px;
  margin: 0px;
  box-sizing: border-box;
}

.form-label {
  font-weight: 500;
}

.radix-themes {
  --cursor-button: pointer;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 50%;
  margin: 0 auto;
}

/* Login and Register Page */

.auth-page {
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-direction: column;
}

.main-content {
  flex-grow: 1;
  display: flex;
  align-items: center;
  justify-content: center;
}

.auth-card {
  padding: 1rem;
  box-shadow: var(--shadow-4);
  min-width: 20rem;
}

.auth-form {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  gap: 0.5rem;
}

/* Habit Page */
.habit-page {
  width: 100vw;
  height: 100vh;
}

.habit-content {
  margin: 0 auto;
  padding: 0 1rem;
  max-width: 800px;
  height: 85%;
}

.habit-new-btn {
  display: flex;
  margin: 1rem 0 1rem 0;
}

.habit {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  min-width: 200px;
}

.habit-week-group {
  display: flex;
  margin-top: 0.5rem;
  gap: 2px;
}

.habit-card-group {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  /* justify-content: space-between; */
  gap: 1rem;
}

.week-square {
  display: flex;
  align-items: center;
  justify-content: center;
  border: 1px solid black;
  border-radius: 5px;
  font-size: 12px;
  width: 1.2rem;
  height: 1.2rem;
}

.habit-btn-group {
  display: flex;
  gap: 0.3rem;
}

/* New Habit Page */

.new-habit-page {
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-direction: column;
}

.new-habit-card {
  max-width: 300px;
  box-shadow: var(--shadow-4);
}

.new-habit-form {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.habit-card-streak {
  display: flex;
  align-items: center;
}

.color-block {
  width: 100%;
  height: 2rem;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0 0 0.3rem 0;
  border-radius: 5px;
}

.new-habit-btn {
  display: flex;
  justify-content: space-between;
  margin: 1rem 0 0 0;
}

.color-pick-group {
  display: flex;
  flex-wrap: wrap;
  gap: 0.2rem;
  /* justify-content: space-between; */
}

.circle {
  width: 30px;
  height: 30px;
  border-radius: 50%;
  margin: 0.2rem;
  border: none;
  cursor: pointer;
}

.circle.selected {
  border: 2px solid black;
}

/* Stat Page */
.stat-page {
  width: 100vw;
  height: 100vh;
}

.stat-content {
  margin: 0 auto;
  padding: 0 1rem;
  max-width: 800px;
}

.stat-topbar {
  display: flex;
  justify-content: space-between;
  margin-top: 1rem;
}

.stat-btn {
  display: flex;
  gap: 0.3rem;
}

.first-stat {
  margin-top: 1rem;
  margin-bottom: 1rem;
  display: flex;
  justify-content: space-between;
}

.current-streak {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 4rem;
  min-height: 175px;
}

.longest-streak {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 4rem;
  min-height: 175px;
}

.completion {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 4rem;
  max-height: 175px;
}

/* Landing Page */

.landing-page {
  width: 100vw;
  height: 100vh;
}

.landing-main-content {
  padding: 6rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 2rem;
}

.landing-catch {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
}

.landing-img {
  display: flex;
  justify-content: center;
  margin: 2rem 0;
}

.landing-image {
  max-width: 80%;
  border-bottom: 1px solid var(--gray-6);
  border-radius: 8px;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
}

.landing-feature {
  display: flex;
  gap: 2rem;
}

.feature-card {
  display: flex;
  flex-direction: column;
  /* justify-content: center; */
  align-items: center;
  text-align: center;
  box-shadow: var(--shadow-3);
  padding: 3rem;
  gap: 0.3rem;
  min-height: 280px;
}

.feature-icon {
  font-size: 2rem;
}

.landing-end {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
}

@media (max-width: 420px) {
  .habit-content {
    margin: 2px;
    padding: 0;
  }
}

/* Footer Styles */
.footer {
  margin-top: 3rem;
}

.footer-content {
  display: flex;
  justify-content: space-between;
  align-items: center;
  max-width: 1200px;
  margin: 0 auto;
}

@media (max-width: 768px) {
  .footer-content {
    flex-direction: column;
    text-align: center;
    gap: 0.5rem;
  }
}

